2013-02-04  Alan Modra  <amodra@gmail.com>

	* ti.h (SWAP_OUT_RELOC_EXTRA): Define.

2013-01-02  Martin Storsjo <martin@martin.st>

	* arm.h (ARMV7PEMAGIC): Define.
	(ARMBADMAG): Update.

2011-06-02  Nick Clifton  <nickc@redhat.com>

	* i860.h: Fix spelling mistake in comment.

2011-05-04  Tristan Gingold  <gingold@adacore.com>

	* rs6000.h (union external_auxent): Add x_ftype field.
	* rs6k64.h: (struct external_auxent): Remap x_file field.

2011-05-04  Tristan Gingold  <gingold@adacore.com>

	* rs6000.h (struct external_exceptab): New struct.
	(EXCEPTSZ): New macro.
	* rs6k64.h: (struct external_exceptab): New struct.
	(EXCEPTSZ): New macro.

2011-05-03  Tristan Gingold  <gingold@adacore.com>

	* rs6000.h (struct external_ldsym): Use E_SYMNMLEN instead of
	SYMNMLEN.

2011-04-27  Tristan Gingold  <gingold@adacore.com>

	* xcoff.h (F_FDPR_PROF, F_FDPR_OPTI, F_DSA, F_VARPG)
	(STYP_DWARF, SSUBTYP_DWINFO)
	(SSUBTYP_DWLINE, SSUBTYP_DWPBNMS, SSUBTYP_DWPBTYP)
	(SSUBTYP_DWARNGE, SSUBTYP_DWABREV, SSUBTYP_DWSTR)
	(SSUBTYP_DWRNGES, STYP_TDATA, STYP_TBSS, R_TLS, R_TLS_IE)
	(R_TLS_LD, R_TLS_LE, R_TLSM, R_TLSML, R_TOCU, R_TOCL, C_DWARF):
	New macros.

2011-03-31  Tristan Gingold  <gingold@adacore.com>

	* internal.h (C_NULL_VALUE): Define.

2010-06-29  Alan Modra  <amodra@gmail.com>

	* maxq.h: Delete file.

2010-04-15  Nick Clifton  <nickc@redhat.com>

	* alpha.h: Update copyright notice to use GPLv3.
	* apollo.h: Likewise.
	* arm.h: Likewise.
	* aux-coff.h: Likewise.
	* ecoff.h: Likewise.
	* external.h: Likewise.
	* go32exe.h: Likewise.
	* h8300.h: Likewise.
	* h8500.h: Likewise.
	* i386.h: Likewise.
	* i860.h: Likewise.
	* i960.h: Likewise.
	* ia64.h: Likewise.
	* internal.h: Likewise.
	* m68k.h: Likewise.
	* m88k.h: Likewise.
	* maxq.h: Likewise.
	* mcore.h: Likewise.
	* mips.h: Likewise.
	* mipspe.h: Likewise.
	* or32.h: Likewise.
	* pe.h: Likewise.
	* powerpc.h: Likewise.
	* rs6000.h: Likewise.
	* rs6k64.h: Likewise.
	* sh.h: Likewise.
	* sparc.h: Likewise.